Zebra Change Log

Trunk (unreleased changes)

  INCOMPATIBLE CHANGES

  IMPROVEMENTS

    PIG-1206 Storing descendingly sorted PIG table as unsorted table (yanz)

    PIG-1125 Map/Reduce API Changes (Chao Wang via yanz)

    PIG-1104 Streaming Support (Chao Wang via yanz)

    PIG-1119 Support of "group" as a column name (Gaurav Jain via yanz)

    PIG-1111 Multiple Outputs Support (Gaurav Jain via yanz)

    PIG-653  Pig Projection Push Down (Gaurav Jain via yanz)

    PIG-1098 Zebra Performance Optimizations (yanz via gates)

    PIG-1077 Support record(row)-based file split in Zebra's
             TableInputFormat (chaow via gates)

    PIG-1089 Use Pig's version for Zebra's own versi (chaow via olgan)

    PIG-1069  Order Preserving Sorted Table Union (yanz via gates)

    PIG-997 Sorted Table Support by Zebra (yanz via gates)
  	
	PIG-996 Add findbugs, checkstyle, and clover to zebra build file (chaow via
	        gates)

	PIG-993 Ability to drop a column group in a table (yanz and rangadi via gates)

    PIG-992 Separate schema related files into a schema package (yanz via
	gates)

  OPTIMIZATIONS

  BUG FIXES

    PIG-1227: Throw exception if column group meta file is missing for an unsorted table (yanz)

    PIG-1201: unnecessary name node calls by each mapper; too big input split serialization size by Pig's Slice implementation (yanz)

    PIG-1167: Hadoop file glob support (yanz)

    PIG-1145: Merge Join on Large Table throws an EOF exception (yanz)

    PIG-1074 Zebra store function should allow '::' in column names in output
	    schema (yanz via gates)

    PIG-1095: Schema support of anonymous fields in COLECTION fails (yanz via
				gates)

    PIG-1078: merge join with empty table failed (yanz via gates)

    PIG-1091: Exception when load with projection of map keys on a map column that is
	not map split (yanz via gates)

    PIG-1026: [zebra] map split returns null (yanz via pradeepkth)
